[package]
name = "kube-overlayfs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "overlay-mount"
path = "bin/main.rs"

[lib]
name = "overlay_mount"
path = "lib/lib.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
nix = { version = "0.30.1", features = ["mount"] }
serde = { version = "1.0", features = ["derive"] }
signal-hook = "0.3.18"
thiserror = "2.0.12"
toml = "0.8"

[dev-dependencies]
tempfile = "3.0"
